# LearnC

./: Bài thực hành 2.c  Bài thực hành 3.c  CMakeLists.txt  LearnFor.c  Learnxapxep.c  PTIT- KS2023A-HoCongThanhTrung.c  PTIT_KS2023S_[HoCongThanhTrung].c  Test.c  bai giang.c  baitapsapxepmangstructtrongC.c  bt1.io.drawio  bt2.io.drawio  bt3.io.drawio  bt4.io.drawio  bt5.io.drawio  bt6.drawio  bt7.drawio  bt8.drawio  bài thực hành1. .cpp  cachamtrongc.c  continue.c  demo project.c  demo.c  exe1  exe1. .cpp  execontinue.c  for reapeat.c  hamdequytrongc.c  learnchuoi(string).c  learndo-while.c  learnham.c  learnmang.c  learnmatrixpoiter.c  learnmousepointer.c  learnpointer array.c  learnwhile.c  library.h  mangstruct in C homework.c  practice struct.c
Hackathon/: demomang1chieu.c  demomang2chieu.c
Homework in class/: BT1.c  BT2.c  BT3.c
SS10/: BT1 - SS10.c  BT2 - SS10.c  BT3 - SS10.c
SS12/: BT1 - SS12.c  BT2 - SS12.c
SS13/: BT1-SS13.c  BT2-SS13.c
SS14/: BT1-SS14.c  BT2-SS14.c  BT5-SS14.c
SS2/: BT1 - SS2.c
SS3/: BT1 - ss3.c  BT2 - ss3.c  BT3 - SS3.c  BT4 - ss3.c  BT5 - SS3.c  BT6 - SS3.c
SS4/: BT1 - SS4.c  BT2 - SS4.c  BT3 - ss4.c  BT4 - ss4.c  BT6 - ss6.c
SS5/: BT1 - SS5.c  BT2 - SS5.c  BT3 - SS5.c  BT4 - SS5.c  BT5 - SS5 .c
SS6/: BT1 - SS6.c  BT2 - SS6.c  BT3 - SS6.c  BT4 - SS6.c
SS7/: BT1 - SS7.c  BT2 - SS7.c  BT3 - SS7.c
SS8/: B1 in class - SS8.c  B2 in class - SS8.c  B3 in class - SS8.c  BT1 - SS8.c  BT2 - SS8.c  BT6 - SS8.c
SS9/: BT1 - SS9.c  BT2 - SS9.c
form.html/: Taobangdongian.html  Taobangdongianp2.html  Taoformdongian.html  color.css  (+2 more)
(+1 files in other folders)
