cmake_minimum_required(VERSION 3.26)
project(tickey C)

set(CMAKE_C_STANDARD 11)

add_library(tickey "bai giang.c"
        "bài thực hành1. .cpp"
        "Bài thực hành 2.c"
        "Bài thực hành 3.c"
        "SS2/BT1 - SS2.c"
        "SS3/BT1 - ss3.c"
        "SS3/BT2 - ss3.c"
        "SS3/BT3 - SS3.c"
        "SS3/BT4 - ss3.c"
        "SS3/BT5 - SS3.c"
        "SS3/BT6 - SS3.c")
