cmake_minimum_required(VERSION 3.26)
project(tickey C)

set(CMAKE_C_STANDARD 11)

add_library(tickey "bai giang.c"
        "exe1. .cpp"
        "Bài thực hành 2.c"
        "continue.c"
        "SS2/BT1 - SS2.c"
        "SS3/BT1 - ss3.c"
        "SS3/BT2 - ss3.c"
        "SS3/BT3 - SS3.c"
        "SS3/BT4 - ss3.c"
        "SS3/BT5 - SS3.c"
        "SS3/BT6 - SS3.c"
        "SS4/BT1 - SS4.c"
        "SS4/BT2 - SS4.c"
        "SS4/BT3 - ss4.c"
        "SS4/BT7 - ss4.c"
        "SS4/BT4 - ss4.c"
        "SS4/BT5 - ss4.c"
        "SS4/BT6 - ss6.c"
        learnwhile.c
        learndo-while.c
        "for reapeat.c"
        "SS6/BT1 - SS6.c"
        "SS5/BT1 - SS5.c"
)
